# mediafire_rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: release.yml
assets/: demo.tape
src/: cli.rs  config.rs  consts.rs  download.rs  global.rs  io.rs  main.rs  progress.rs  report.rs  styles.rs  utils.rs  workers.rs
src/api/: file.rs  folder.rs  mod.rs
src/types/: client.rs  download.rs  file.rs  file_type.rs  folder.rs  get_content.rs  get_info.rs  mod.rs  permissions.rs
