[package]
name = "mediafire_rs"
description = "Downloads files and folders from mediafire"
authors = ["NicKoehler <grillinicola@proton.me"]
version = "0.1.7"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NicKoehler/mediafire_rs"
repository = "https://github.com/NicKoehler/mediafire_rs"
keywords = ["cli", "mediafire", "files", "folders", "download"]
categories = ["command-line-utilities"]

[[bin]]
name = "mdrs"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
ring = "0.17.8"
regex = "1.10.3"
anyhow = "1.0.80"
futures = "0.3.30"
scraper = "0.19.0"
deadqueue = "0.2.4"
indicatif = "0.17.8"
lazy_static = "1.5.0"
async-recursion = "1.0.5"
clap = { version = "4.5.20", features = ["cargo"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.211", features = ["serde_derive"] }
reqwest = { version = "0.12.12", features = ["stream", "json", "gzip", "rustls-tls", "socks"] }

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
