[package]
name = "mediafire_rs"
description = "Downloads files and folders from mediafire"
authors = ["NicKoehler <grillinicola@proton.me"]
version = "0.2.1"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NicKoehler/mediafire_rs"
repository = "https://github.com/NicKoehler/mediafire_rs"
keywords = ["cli", "mediafire", "files", "folders", "download"]
categories = ["command-line-utilities"]

[[bin]]
name = "mdrs"
path = "src/main.rs"

[dependencies]
colored = "3.1.1"
futures = "0.3.32"
indicatif = "0.18.3"
md_downloader = "0.1.3"
clap = { version = "4.5.55", features = ["cargo"] }
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
